--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -23,24 +24,34 @@ input:-webkit-autofill {
 }
 
 body {
-  @apply font-montserrat text-sm font-medium bg-white text-black overflow-x-hidden;
+  @apply font-inter text-sm font-normal bg-white text-black overflow-x-hidden;
 }
 
 @layer components {
-    .btn {
-        @apply w-10 h-10 flex justify-center items-center bg-white rounded-lg absolute top-1/2 -translate-y-1/2 cursor-pointer;
-    }
+  .btn {
+    @apply w-10 h-10 flex justify-center items-center bg-white rounded-lg absolute top-1/2 -translate-y-1/2 cursor-pointer;
+  }
 
-    .btn.left {
-        @apply left-20;
-    }
-    .btn.right { 
-        @apply right-20;
-    }
+  .btn.left {
+    @apply left-20;
+  }
+  .btn.right {
+    @apply right-20;
+  }
 
-    .container {
-        @apply px-3 md:px-5 lg:px-20;
-    }
+  .container {
+    @apply !px-3 md:px-5 lg:!px-20 lg:!max-w-[1500px];
+  }
+  .button-phone {
+    @apply flex items-center gap-x-3 border-2 border-white rounded-3xl bg-gradient-phone text-white py-4 px-5 shadow-phone;
+  }
+  .button-phone-children {
+    @apply relative;
+  }
+  .button-phone-children::before,
+  .button-phone-children::after {
+    @apply absolute content-[''] left-0 top-0 w-full h-full opacity-70 bg-[#eec75b] z-[1] rounded-full;
+  }
 }
 
 .swiper-button-next,
@@ -58,10 +69,25 @@ body {
 }
 
 .swiper-pagination-bullet.swiper-pagination-bullet-active {
-    background-color: white;
+  background-color: white;
 }
 
 .swiper-pagination-bullet {
-    position: relative;
-    z-index: 1001;
+  position: relative;
+  z-index: 1001;
+}
+
+.button-phone-children::before {
+    animation: pulse 2s ease-out infinite;
+}
+
+.button-phone-children::after {
+    animation: pulse 2s 1s ease-out infinite;
+}
+
+@keyframes pulse {
+    100% {
+        transform: scale(4.5);
+        opacity: 0;
+    }
 }
