--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -40,7 +40,7 @@ body {
   }
 
   .container {
-    @apply !px-3 md:px-5 lg:!px-20 lg:!max-w-[1500px];
+    @apply !px-3 md:!px-5 lg:!px-20 lg:!max-w-[1500px];
   }
   .button-phone {
     @apply flex items-center gap-x-3 border-2 border-white rounded-3xl bg-gradient-phone text-white py-4 px-5 shadow-phone;
